test/negative/betweenand01.cfr
// Test for negative between and constraint

a
 b ?
  c ?
  d ?
  e ?
  [ between d and e ]


